[package]
name = "tzbuddy"
version = "0.4.3"
authors = ["Giacomo Bagnoli <gbagnoli@gmail.com>"]
edition = "2024"
homepage = "https://github.com/gbagnoli/tzbuddy.rs"
repository = "https://github.com/gbagnoli/tzbuddy.rs"
license-file = "LICENSE"
description = "tzbuddy simply diplays current date/time in several timezones, together with a few hours before and after"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
chrono = "*"
chrono-tz = "*"
clap = {version= "3", features=["cargo", "derive"]}
confy = "*"
prettytable-rs = "*"
serde = { version = "*", features = ["derive"] }
