[package]
name = "tzbuddy"
version = "0.5.2"
authors = ["Giacomo Bagnoli <gbagnoli@gmail.com>"]
edition = "2024"
homepage = "https://github.com/gbagnoli/tzbuddy.rs"
repository = "https://github.com/gbagnoli/tzbuddy.rs"
license-file = "LICENSE"
description = "tzbuddy simply diplays current date/time in several timezones, together with a few hours before and after"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
chrono = "^0.4"
chrono-tz = "^0.10"
clap = {version= "4", features=["cargo", "derive"]}
confy = "^0.6"
prettytable-rs = "^0.10"
serde = { version = "^1", features = ["derive"] }
